Ensure that visual styling is not dark mode specific.

--- a/blog/static/css/custom.css
+++ b/blog/static/css/custom.css
@@ -174,6 +174,13 @@ hr.small {
 
 /* --- Tables --- */
 
+/* Table border */
+table tr,
+table tr th,
+table tr td {
+  border: 0;
+}
+
 @media (prefers-color-scheme: dark) {
   /* Table rows (odd and even respectively) */
   table tr {
@@ -189,13 +196,6 @@ hr.small {
     background-color: #103b56;
     color: #ccc;
   }
-
-  /* Table border */
-  table tr,
-  table tr th,
-  table tr td {
-    border: 0;
-  }
 }
 
 /* --- Code blocks --- */
@@ -210,12 +210,17 @@ pre, code {
   text-align: right;
 }
 
+/* Remove border around code blocks */
+pre,
+code {
+  border: 0;
+}
+
 @media (prefers-color-scheme: dark) {
   /* Code blocks and inline code */
   pre,
   code {
     background: #002836;
     color: #aaa;
-    border: 0;
   }
 }
